--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,18 +1,19 @@
-<h1>Comments_index_view</h1>
-<p>Find me in app/views/comments/index.html.erb</p>
-<%= @comments.count %>
-<table>
+<h1>All Comments</h1>
+
+<h4>Total: <%= @comments.count %> </h4>
+<table class="table table-bordered">
     <tr>
       <th>Text</th>
       <th>Date</th>
-      <th></th>
-      <th></th>
-      <th></th>
+	  <th>Post_id</th>
+      <th>Actions</th>
+	  
     </tr>
 <% @comments.each do |comment|%>
 <tr>
 	<td><%= comment.text %> </td>
 	<td> Date: <%= comment.created_at %></td>
+	<td><%= comment.post.id %> </td>
 	<td><%= link_to 'Show', comment %></td>
     <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
     <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %>
@@ -20,4 +21,3 @@
 <% end %>
 </table>
 
-<%= link_to 'New Comment', new_comment_path %>
