--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,15 +11,17 @@
     </div>
   <% end %>
 
+
   <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
+    
+    <%= f.text_field :title,:placeholder => "Enter Title" %>
   </div>
+  
   <div class="field">
-    <%= f.label :content %><br />
-    <%= f.text_area :content %>
+   
+    <%= f.text_area :content ,:placeholder => "Enter Conten"%>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class =>"btn btn-embossed btn-primary" %>
   </div>
 <% end %>
